--- a/templates/index.html
+++ b/templates/index.html
@@ -70,11 +70,71 @@
         </section>
         <section class="secSobre container" id="secSobre">
             <h3>Sobre</h3>
-            <div class="row sobreContent"></div>
-            <p>Meu nome é Willian Pereira da Silva, sou formado em Sistemas de Informação pela Universidade do
-                Estado de
-                Minas Gerais (UEMG) - Campus Passos e atualmente sou Servidor Público pela Prefeitura Municipal de
-                Capitólio, lotado na Secretaria de Saúde, trabalhando como Agente Comunitário de Saúde.</p>
+            <div class="row sobreContent">
+                <p>Meu nome é Willian Pereira da Silva, sou formado em Sistemas de Informação pela Universidade do
+                    Estado de
+                    Minas Gerais (UEMG) - Campus Passos e atualmente sou Servidor Público pela Prefeitura Municipal de
+                    Capitólio, lotado na Secretaria de Saúde, trabalhando como Agente Comunitário de Saúde.</p>
+                <p>Recém formado, busco estudar sobre desenvolvimento web. Pretendo ser programador web fullstack. Essas são algumas skills que eu almejo ou já utilizei:</p>
+                <div class="row">
+                    <div class="col-md-6">
+                        <p class='mt-3 mb-0'>Git</p>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
+                                data-anime="left" aria-valuemin="0" aria-valuemax="100">Estudando...</div>
+                        </div>
+                        <p class='mt-3 mb-0'>JS</p>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
+                                data-anime="left" aria-valuemin="0" aria-valuemax="100">Estudando...</div>
+                        </div>
+                        <p class='mt-3 mb-0'>CSS</p>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
+                                data-anime="left" aria-valuemin="0" aria-valuemax="100">Estudando...</div>
+                        </div>
+                        <p class='mt-3 mb-0'>PHP</p>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
+                                data-anime="left" aria-valuemin="0" aria-valuemax="100">Utilizado em um projeto</div>
+                        </div>
+                        <p class='mt-3 mb-0'>Python</p>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
+                                data-anime="left" aria-valuemin="0" aria-valuemax="100">Utilizado em um projeto</div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <p class='mt-3 mb-0'>GitHub</p>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
+                                data-anime="left" aria-valuemin="0" aria-valuemax="100">Estudando...</div>
+                        </div>
+                        <p class='mt-3 mb-0'>HTML</p>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
+                                data-anime="left" aria-valuemin="0" aria-valuemax="100">Estudando...</div>
+                        </div>
+                        <p class='mt-3 mb-0'>Bootstrap</p>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
+                                data-anime="left" aria-valuemin="0" aria-valuemax="100">Estudando...</div>
+                        </div>
+                        <p class='mt-3 mb-0'>MySQL</p>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
+                                data-anime="left" aria-valuemin="0" aria-valuemax="100">Utilizado em um projeto</div>
+                        </div>
+                        <p class='mt-3 mb-0'>Flask</p>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
+                                data-anime="left" aria-valuemin="0" aria-valuemax="100">Utilizado em um projeto</div>
+                        </div>
+                    </div>
+                </div>
+                <span class="sobreAtt">Última atualização: 21/06/2022</span>
+            </div>
+            </div>
             </div>
         </section>
         <section class="secCurriculo container" id="secCurriculo">
@@ -140,9 +200,9 @@
                                             alt="Print do ProdACS">
                                         <div class="card-body">
                                             <h5 class="card-title">ProdACS</h5>
-                                            <p class="card-text">Projeto fullstack desenvolvido para o meu TC, criado
+                                            <p class="card-text">Projeto fullstack do meu TC, criado
                                                 com PHP, Bootstrap, JS, DataTables, FullCalendar, Google Maps API e
-                                                MySQL. Descontinuado.</p>
+                                                MySQL.</p>
                                             <div class="d-flex justify-content-center">
                                                 <a href="https://github.com/williancapitolio/prodacs" target='_blank'
                                                     class="btn btn-dark me-3" role="button"><i
@@ -204,7 +264,7 @@
                                         <div class="card-body">
                                             <h5 class="card-title">Em breve</h5>
                                             <p class="card-text">Seja paciente e aguarde um momento, pois eu estou
-                                                desenvolvendo um novo projeto para ficar aqui!</p>
+                                                desenvolvendo um novo projeto para ficar aqui! Aguarde...</p>
                                             <div class="d-flex justify-content-center">
                                                 <a href="#" target='_blank' class="btn btn-dark me-3 disabled"
                                                     role="button" aria-disabled="true"><i class="bi bi-github"></i></a>
@@ -222,7 +282,7 @@
                                         <div class="card-body">
                                             <h5 class="card-title">Em breve</h5>
                                             <p class="card-text">Seja paciente e aguarde um momento, pois eu estou
-                                                desenvolvendo um novo projeto para ficar aqui!</p>
+                                                desenvolvendo um novo projeto para ficar aqui! Aguarde...</p>
                                             <div class="d-flex justify-content-center">
                                                 <a href="#" target='_blank' class="btn btn-dark me-3 disabled"
                                                     role="button" aria-disabled="true"><i class="bi bi-github"></i></a>
@@ -240,7 +300,7 @@
                                         <div class="card-body">
                                             <h5 class="card-title">Em breve</h5>
                                             <p class="card-text">Seja paciente e aguarde um momento, pois eu estou
-                                                desenvolvendo um novo projeto para ficar aqui!</p>
+                                                desenvolvendo um novo projeto para ficar aqui! Aguarde...</p>
                                             <div class="d-flex justify-content-center">
                                                 <a href="#" target='_blank' class="btn btn-dark me-3 disabled"
                                                     role="button" aria-disabled="true"><i class="bi bi-github"></i></a>
@@ -257,14 +317,14 @@
                     </div>
 
                     <div class="controlesBanner">
-                        <button type="button" class="carousel-control-prev" data-bs-target="#banner"
+                        <!--<button type="button" class="carousel-control-prev" data-bs-target="#banner"
                             data-bs-slide="prev">
                             <span class="carousel-control-prev-icon"></span>
                         </button>
                         <button type="button" class="carousel-control-next" data-bs-target="#banner"
                             data-bs-slide="next">
                             <span class="carousel-control-next-icon"></span>
-                        </button>
+                        </button>-->
                     </div>
 
                 </div>
