--- a/templates/index.html
+++ b/templates/index.html
@@ -75,7 +75,8 @@
                     Estado de
                     Minas Gerais (UEMG) - Campus Passos e atualmente sou Servidor Público pela Prefeitura Municipal de
                     Capitólio, lotado na Secretaria de Saúde, trabalhando como Agente Comunitário de Saúde.</p>
-                <p>Recém formado, busco estudar sobre desenvolvimento web. Pretendo ser programador web fullstack. Essas são algumas skills que eu almejo ou já utilizei:</p>
+                <p>Recém formado, busco estudar sobre desenvolvimento web. Pretendo ser programador web fullstack. Essas
+                    são algumas skills que eu almejo ou já utilizei:</p>
                 <div class="row">
                     <div class="col-md-6">
                         <p class='mt-3 mb-0'>Git</p>
@@ -83,28 +84,6 @@
                             <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
                                 data-anime="left" aria-valuemin="0" aria-valuemax="100">Estudando...</div>
                         </div>
-                        <p class='mt-3 mb-0'>JS</p>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
-                                data-anime="left" aria-valuemin="0" aria-valuemax="100">Estudando...</div>
-                        </div>
-                        <p class='mt-3 mb-0'>CSS</p>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
-                                data-anime="left" aria-valuemin="0" aria-valuemax="100">Estudando...</div>
-                        </div>
-                        <p class='mt-3 mb-0'>PHP</p>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
-                                data-anime="left" aria-valuemin="0" aria-valuemax="100">Utilizado em um projeto</div>
-                        </div>
-                        <p class='mt-3 mb-0'>Python</p>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
-                                data-anime="left" aria-valuemin="0" aria-valuemax="100">Utilizado em um projeto</div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
                         <p class='mt-3 mb-0'>GitHub</p>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
@@ -115,12 +94,34 @@
                             <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
                                 data-anime="left" aria-valuemin="0" aria-valuemax="100">Estudando...</div>
                         </div>
+                        <p class='mt-3 mb-0'>CSS</p>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
+                                data-anime="left" aria-valuemin="0" aria-valuemax="100">Estudando...</div>
+                        </div>
                         <p class='mt-3 mb-0'>Bootstrap</p>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
                                 data-anime="left" aria-valuemin="0" aria-valuemax="100">Estudando...</div>
                         </div>
+                    </div>
+                    <div class="col-md-6">
+                        <p class='mt-3 mb-0'>JS</p>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
+                                data-anime="left" aria-valuemin="0" aria-valuemax="100">Estudando...</div>
+                        </div>
+                        <p class='mt-3 mb-0'>PHP</p>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
+                                data-anime="left" aria-valuemin="0" aria-valuemax="100">Utilizado em um projeto</div>
+                        </div>
                         <p class='mt-3 mb-0'>MySQL</p>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
+                                data-anime="left" aria-valuemin="0" aria-valuemax="100">Utilizado em um projeto</div>
+                        </div>
+                        <p class='mt-3 mb-0'>Python</p>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
                                 data-anime="left" aria-valuemin="0" aria-valuemax="100">Utilizado em um projeto</div>
@@ -336,7 +337,17 @@
             <h3>Contato</h3>
         </section>
     </main>
-    <footer class="footer">williancapitolio</footer>
+    <footer class="footer">
+        <div class="container footerTop">
+            <a href="https://github.com/williancapitolio" target='_blank' class="btn btn-primary me-3" role="button"><i
+                    class="bi bi-github"></i></a>
+            <a href="https://www.instagram.com/williancapitolio" target='_blank' class="btn btn-primary me-3"
+                role="button"><i class="bi bi-instagram"></i></a>
+            <a href="mailto:contato.williancapitolio@gmail.com" target='_blank' class="btn btn-primary me-3"
+                role="button"><i class="bi bi-envelope"></i></a>
+        </div>
+        <div class="container footerBottom">Copyright &copy; 2022 <strong>williancapitolio</strong></div>
+    </footer>
 </body>
 
 </html>
