--- a/static/css/style.css
+++ b/static/css/style.css
@@ -37,6 +37,47 @@
 }
 */
 
+[data-anime] {
+    opacity: 0;
+    transition: 1s;
+}
+
+/* vem de baixo pra cima */
+[data-anime="down"] {
+    transform: translate3d(0, -100%, 0);
+
+}
+
+/* vem de cima pra baixo */
+[data-anime="up"] {
+    transform: translate3d(0, 100%, 0);
+
+}
+
+/* vem da esquerda pra direita */
+[data-anime="left"] {
+    transform: translate3d(-100%, 0, 0);
+
+}
+
+/* vem da direita pra esquerda */
+[data-anime="right"] {
+    transform: translate3d(50px, 0, 0);
+
+}
+
+[data-anime].animate {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+}
+
+@media (max-width: 820px) {
+    [data-anime="right"] {
+        transform: translate3d(0, 100%, 0);
+
+    }
+}
+
 body {
     background-color: var(--colorBg);
 }
@@ -274,15 +315,9 @@ h6 {
     margin-top: 2em;
 }
 
-/*
-.carouselInicio .card {
-    height: 450px;
-}
-*/
-
 .carouselInicio .card h5,
 .carouselInicio .card p,
-.carouselInicio .card a{
+.carouselInicio .card a {
     color: var(--colorBg);
 }
 
@@ -306,7 +341,7 @@ h6 {
     margin-bottom: 2em;
 }
 
-.footerBottom strong{
+.footerBottom strong {
     color: var(--colorOne);
     margin-top: 2em;
 }
