updates sec curriculo

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -301,6 +301,9 @@ h6 {
     border-radius: 50%;
 }
 
+.curriculoBaixar {
+}
+
 @media (max-width: 768px) {
     .curriculoTitle:nth-child(2) {
         margin-top: 2em;
