--- a/templates/index.html
+++ b/templates/index.html
@@ -179,6 +179,11 @@
                         </p>
                     </div>
                 </div>
+                <div class="col mt-4 curriculoBaixar">
+                    <p class="mb-2">Ficou alguma dúvida? Clique no botão abaixo e vizualize meu currículo completo!</p>
+                    <a href="#" target='_blank' class="btn btn-primary me-3"
+                        role="button"><i class="bi bi-file-image"></i> Vizualizar Currículo</a>
+                </div>
             </div>
         </section>
         <section class="secPortfolio container" id="secPortfolio">
