--- a/static/css/style.css
+++ b/static/css/style.css
@@ -301,8 +301,10 @@ h6 {
     border-radius: 50%;
 }
 
+/*
 .curriculoBaixar {
 }
+*/
 
 @media (max-width: 768px) {
     .curriculoTitle:nth-child(2) {
