--- a/templates/index.html
+++ b/templates/index.html
@@ -70,12 +70,13 @@
         </section>
         <section class="secSobre container" id="secSobre">
             <h3>Sobre</h3>
-            <div class="row sobreContent">
+            <div class="sobreContent">
                 <p>Meu nome é Willian Pereira da Silva, sou formado em Sistemas de Informação pela Universidade do
                     Estado de
                     Minas Gerais (UEMG) - Campus Passos.</p>
-                <p>Recém formado, busco estudar sobre desenvolvimento web. Pretendo ser programador web fullstack. Essas
-                    são algumas skills que eu almejo ou já utilizei:</p>
+                <p>Recém formado, busco estudar sobre desenvolvimento web. Pretendo ser programador web fullstack.</p>
+                <h4 class="sobreHabilidades">Habilidades</h4>
+                <p class="mb-0"> Essas são algumas habilidades/skills que eu almejo ou já utilizei:</p>
                 <div class="row">
                     <div class="col-md-6">
                         <p class='mt-3 mb-0'>Git</p>
@@ -103,9 +104,19 @@
                             <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
                                 data-anime="left" aria-valuemin="0" aria-valuemax="100">Estudando...</div>
                         </div>
+                        <p class='mt-3 mb-0'>JS</p>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
+                                data-anime="left" aria-valuemin="0" aria-valuemax="100">Estudando...</div>
+                        </div>
                     </div>
                     <div class="col-md-6">
-                        <p class='mt-3 mb-0'>JS</p>
+                        <p class='mt-3 mb-0'>Deploy</p>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
+                                data-anime="left" aria-valuemin="0" aria-valuemax="100">Estudando...</div>
+                        </div>
+                        <p class='mt-3 mb-0'>Heroku</p>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
                                 data-anime="left" aria-valuemin="0" aria-valuemax="100">Estudando...</div>
@@ -132,7 +143,7 @@
                         </div>
                     </div>
                 </div>
-                <span class="sobreAtt">Última atualização: 21/06/2022</span>
+                <p class="sobreAtt">Última atualização: 21/06/2022</p>
             </div>
             </div>
             </div>
