little uptade on index and compress imgs

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Willian Pereira da Silva">
     <meta name="description"
-        content="Site portfólio do Willian, com um perfil de programação voltado para o desenvolvimento web.">
-    <meta name="keywords" content="programação, programação web, desenvolvimento web, portfolio, site">
-    <!-- <link rel="canonical" href="link da pag"> -->
+        content="Site landing page do Willian, com um perfil de programação voltado para o desenvolvimento web.">
+    <meta name="keywords" content="programação, programação web, desenvolvimento web, portfolio, site, landing page">
+    <link rel="canonical" href="https://williancapitolio.herokuapp.com/">
     <title>williancapitolio - Portfólio</title>
     <link rel="apple-touch-icon" sizes="180x180" href="../static/img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../static/img/favicon-32x32.png">
