--- a/templates/index.html
+++ b/templates/index.html
@@ -84,11 +84,6 @@
                             <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
                                 data-anime="left" aria-valuemin="0" aria-valuemax="100">Estudando...</div>
                         </div>
-                        <p class='mt-3 mb-0'>GitHub</p>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
-                                data-anime="left" aria-valuemin="0" aria-valuemax="100">Estudando...</div>
-                        </div>
                         <p class='mt-3 mb-0'>HTML</p>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
@@ -109,6 +104,16 @@
                             <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
                                 data-anime="left" aria-valuemin="0" aria-valuemax="100">Estudando...</div>
                         </div>
+                        <p class='mt-3 mb-0'>Node.js</p>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
+                                data-anime="left" aria-valuemin="0" aria-valuemax="100">Estudando...</div>
+                        </div>
+                        <p class='mt-3 mb-0'>Express</p>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
+                                data-anime="left" aria-valuemin="0" aria-valuemax="100">Estudando...</div>
+                        </div>
                     </div>
                     <div class="col-md-6">
                         <p class='mt-3 mb-0'>Deploy</p>
@@ -121,15 +126,15 @@
                             <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
                                 data-anime="left" aria-valuemin="0" aria-valuemax="100">Estudando...</div>
                         </div>
-                        <p class='mt-3 mb-0'>PHP</p>
+                        <p class='mt-3 mb-0'>SQL</p>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
-                                data-anime="left" aria-valuemin="0" aria-valuemax="100">Utilizado em um projeto</div>
+                                data-anime="left" aria-valuemin="0" aria-valuemax="100">Estudando...</div>
                         </div>
-                        <p class='mt-3 mb-0'>MySQL</p>
+                        <p class='mt-3 mb-0'>NoSQL</p>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
-                                data-anime="left" aria-valuemin="0" aria-valuemax="100">Utilizado em um projeto</div>
+                                data-anime="left" aria-valuemin="0" aria-valuemax="100">Estudando...</div>
                         </div>
                         <p class='mt-3 mb-0'>Python</p>
                         <div class="progress">
@@ -141,9 +146,14 @@
                             <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
                                 data-anime="left" aria-valuemin="0" aria-valuemax="100">Utilizado em um projeto</div>
                         </div>
+                        <p class='mt-3 mb-0'>PHP</p>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
+                                data-anime="left" aria-valuemin="0" aria-valuemax="100">Utilizado em um projeto</div>
+                        </div>
                     </div>
                 </div>
-                <p class="sobreAtt">Última atualização: 21/06/2022</p>
+                <p class="sobreAtt">Última atualização: 05/07/2022</p>
             </div>
             </div>
             </div>
@@ -277,17 +287,17 @@
                             <div class="row row-cols-1 row-cols-md-3 g-4">
                                 <div class="col">
                                     <div class="card">
-                                        <img src="../static/img/portfolio-not-found.png" class="card-img-top"
-                                            alt="Novo projeto aqui em breve">
+                                        <img src="../static/img/portfolio-4-hardcoretodolist.png" class="card-img-top"
+                                            alt="Print da Hardcore To Do List">
                                         <div class="card-body">
-                                            <h5 class="card-title">Em breve</h5>
-                                            <p class="card-text">Seja paciente e aguarde um momento, pois eu estou
-                                                desenvolvendo um novo projeto para ficar aqui! Aguarde...</p>
+                                            <h5 class="card-title">Hardcore To Do List</h5>
+                                            <p class="card-text">To Do List feita com Node.js e MongoDB Atlas com deploy no Heroku. CRUD
+                                                back-end - pesquisa e paginação front-end.</p>
                                             <div class="d-flex justify-content-center">
-                                                <a href="#" target='_blank' class="btn btn-dark me-3 disabled"
-                                                    role="button" aria-disabled="true"><i class="bi bi-github"></i></a>
-                                                <a href="#" target='_blank' class="btn btn-primary disabled"
-                                                    role="button" aria-disabled="true"><i
+                                                <a href="https://github.com/williancapitolio/hardcoretodolist" target='_blank' class="btn btn-dark me-3"
+                                                    role="button"><i class="bi bi-github"></i></a>
+                                                <a href="https://hardcoretodolist.herokuapp.com/" target='_blank' class="btn btn-primary"
+                                                    role="button"><i
                                                         class="bi bi-link-45deg"></i></a>
                                             </div>
                                         </div>
