sec portifolio add card sound board rodrigo faro

--- a/templates/index.html
+++ b/templates/index.html
@@ -291,13 +291,15 @@
                                             alt="Print da Hardcore To Do List">
                                         <div class="card-body">
                                             <h5 class="card-title">Hardcore To Do List</h5>
-                                            <p class="card-text">To Do List feita com Node.js e MongoDB Atlas com deploy no Heroku. CRUD
+                                            <p class="card-text">To Do List feita com Node.js e MongoDB Atlas com deploy
+                                                no Heroku. CRUD
                                                 back-end - pesquisa e paginação front-end.</p>
                                             <div class="d-flex justify-content-center">
-                                                <a href="https://github.com/williancapitolio/hardcoretodolist" target='_blank' class="btn btn-dark me-3"
-                                                    role="button"><i class="bi bi-github"></i></a>
-                                                <a href="https://hardcoretodolist.herokuapp.com/" target='_blank' class="btn btn-primary"
-                                                    role="button"><i
+                                                <a href="https://github.com/williancapitolio/hardcoretodolist"
+                                                    target='_blank' class="btn btn-dark me-3" role="button"><i
+                                                        class="bi bi-github"></i></a>
+                                                <a href="https://hardcoretodolist.herokuapp.com/" target='_blank'
+                                                    class="btn btn-primary" role="button"><i
                                                         class="bi bi-link-45deg"></i></a>
                                             </div>
                                         </div>
@@ -305,17 +307,18 @@
                                 </div>
                                 <div class="col">
                                     <div class="card">
-                                        <img src="../static/img/portfolio-not-found.png" class="card-img-top"
-                                            alt="Novo projeto aqui em breve">
+                                        <img src="../static/img/portfolio-5-rodrigofarosoundboard.png"
+                                            class="card-img-top" alt="Print da Hardcore To Do List">
                                         <div class="card-body">
-                                            <h5 class="card-title">Em breve</h5>
-                                            <p class="card-text">Seja paciente e aguarde um momento, pois eu estou
-                                                desenvolvendo um novo projeto para ficar aqui! Aguarde...</p>
+                                            <h5 class="card-title">Sound Board - Rodrigo Faro</h5>
+                                            <p class="card-text">Sound Board com os melhores áudios do Rodrigo Faro.
+                                                Criado com Node.js para o deploy no Heroku e JS no front-end</p>
                                             <div class="d-flex justify-content-center">
-                                                <a href="#" target='_blank' class="btn btn-dark me-3 disabled"
-                                                    role="button" aria-disabled="true"><i class="bi bi-github"></i></a>
-                                                <a href="#" target='_blank' class="btn btn-primary disabled"
-                                                    role="button" aria-disabled="true"><i
+                                                <a href="https://github.com/williancapitolio/rodrigofarosoundboard"
+                                                    target='_blank' class="btn btn-dark me-3" role="button"><i
+                                                        class="bi bi-github"></i></a>
+                                                <a href="https://rodrigofarosoundboard.herokuapp.com/" target='_blank'
+                                                    class="btn btn-primary" role="button"><i
                                                         class="bi bi-link-45deg"></i></a>
                                             </div>
                                         </div>
