update alt of imgs sec portfolio

--- a/templates/index.html
+++ b/templates/index.html
@@ -225,7 +225,7 @@
                                 <div class="col">
                                     <div class="card">
                                         <img src="../static/img/portfolio-1-prodacs.png" class="card-img-top"
-                                            alt="Print do ProdACS">
+                                            alt="Print da tela do ProdACS">
                                         <div class="card-body">
                                             <h5 class="card-title">ProdACS</h5>
                                             <p class="card-text">Projeto fullstack do meu TC, criado
@@ -245,7 +245,7 @@
                                 <div class="col">
                                     <div class="card">
                                         <img src="../static/img/portfolio-2-lords.png" class="card-img-top"
-                                            alt="Print da Lord's Personal Studio">
+                                            alt="Print da tela do Lord's Personal Studio">
                                         <div class="card-body">
                                             <h5 class="card-title">Lord's Personal Studio</h5>
                                             <p class="card-text">Projeto front-end landing page para a Academia
@@ -264,7 +264,7 @@
                                 <div class="col">
                                     <div class="card">
                                         <img src="../static/img/portfolio-3-giro.png" class="card-img-top"
-                                            alt="Print da Giro Capitólio">
+                                            alt="Print da tela do Giro Capitólio">
                                         <div class="card-body">
                                             <h5 class="card-title">Giro Capitólio</h5>
                                             <p class="card-text">Projeto front-end landing page para a Agência de
@@ -288,7 +288,7 @@
                                 <div class="col">
                                     <div class="card">
                                         <img src="../static/img/portfolio-4-hardcoretodolist.png" class="card-img-top"
-                                            alt="Print da Hardcore To Do List">
+                                            alt="Print da tela do Hardcore To Do List">
                                         <div class="card-body">
                                             <h5 class="card-title">Hardcore To Do List</h5>
                                             <p class="card-text">To Do List feita com Node.js e MongoDB Atlas com deploy
@@ -308,7 +308,7 @@
                                 <div class="col">
                                     <div class="card">
                                         <img src="../static/img/portfolio-5-rodrigofarosoundboard.png"
-                                            class="card-img-top" alt="Print da Hardcore To Do List">
+                                            class="card-img-top" alt="Print da tela do Sound Board - Rodrigo Faro">
                                         <div class="card-body">
                                             <h5 class="card-title">Sound Board - Rodrigo Faro</h5>
                                             <p class="card-text">Sound Board com os melhores áudios do Rodrigo Faro.
