--- a/templates/index.html
+++ b/templates/index.html
@@ -216,6 +216,7 @@
                     <div id="indicadoresBanner" class="carousel-indicators">
                         <button type="button" data-bs-target="#banner" data-bs-slide-to="0" class="active"></button>
                         <button type="button" data-bs-target="#banner" data-bs-slide-to="1"></button>
+                        <button type="button" data-bs-target="#banner" data-bs-slide-to="2"></button>
                     </div>
 
                     <div id="portfolioBanner" class="carousel-inner">
@@ -311,7 +312,7 @@
                                             class="card-img-top" alt="Print da tela do Sound Board - Rodrigo Faro">
                                         <div class="card-body">
                                             <h5 class="card-title">Sound Board - Rodrigo Faro</h5>
-                                            <p class="card-text">Sound Board com os melhores áudios do Rodrigo Faro.
+                                            <p class="card-text">Sound Board com áudios do Rodrigo Faro.
                                                 Criado com Node.js para o deploy no Heroku e JS no front-end</p>
                                             <div class="d-flex justify-content-center">
                                                 <a href="https://github.com/williancapitolio/rodrigofarosoundboard"
@@ -319,6 +320,65 @@
                                                         class="bi bi-github"></i></a>
                                                 <a href="https://rodrigofarosoundboard.herokuapp.com/" target='_blank'
                                                     class="btn btn-primary" role="button"><i
+                                                        class="bi bi-link-45deg"></i></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="card">
+                                        <img src="../static/img/portfolio-not-found.png" class="card-img-top"
+                                            alt="Novo projeto aqui em breve">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Em breve</h5>
+                                            <p class="card-text">Seja paciente e aguarde um momento, pois eu estou
+                                                desenvolvendo um novo projeto para ficar aqui! Aguarde...</p>
+                                            <div class="d-flex justify-content-center">
+                                                <a href="#" target='_blank' class="btn btn-dark me-3 disabled"
+                                                    role="button" aria-disabled="true"><i class="bi bi-github"></i></a>
+                                                <a href="#" target='_blank' class="btn btn-primary disabled"
+                                                    role="button" aria-disabled="true"><i
+                                                        class="bi bi-link-45deg"></i></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="carousel-item">
+                            <div class="row row-cols-1 row-cols-md-3 g-4">
+                                <div class="col">
+                                    <div class="card">
+                                        <img src="../static/img/portfolio-not-found.png" class="card-img-top"
+                                            alt="Novo projeto aqui em breve">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Em breve</h5>
+                                            <p class="card-text">Seja paciente e aguarde um momento, pois eu estou
+                                                desenvolvendo um novo projeto para ficar aqui! Aguarde...</p>
+                                            <div class="d-flex justify-content-center">
+                                                <a href="#" target='_blank' class="btn btn-dark me-3 disabled"
+                                                    role="button" aria-disabled="true"><i class="bi bi-github"></i></a>
+                                                <a href="#" target='_blank' class="btn btn-primary disabled"
+                                                    role="button" aria-disabled="true"><i
+                                                        class="bi bi-link-45deg"></i></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="card">
+                                        <img src="../static/img/portfolio-not-found.png" class="card-img-top"
+                                            alt="Novo projeto aqui em breve">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Em breve</h5>
+                                            <p class="card-text">Seja paciente e aguarde um momento, pois eu estou
+                                                desenvolvendo um novo projeto para ficar aqui! Aguarde...</p>
+                                            <div class="d-flex justify-content-center">
+                                                <a href="#" target='_blank' class="btn btn-dark me-3 disabled"
+                                                    role="button" aria-disabled="true"><i class="bi bi-github"></i></a>
+                                                <a href="#" target='_blank' class="btn btn-primary disabled"
+                                                    role="button" aria-disabled="true"><i
                                                         class="bi bi-link-45deg"></i></a>
                                             </div>
                                         </div>
